kubernetes/kyak/apps/networking/cloudflared/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/instance: nginx-external
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchPattern: "*.argotunnel.com"
      toPorts:
        - ports:
            - port: "443"
        - ports:
            - port: "80"
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 173.245.48.0/20
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 103.21.244.0/22
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 103.22.200.0/22
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 103.31.4.0/22
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 141.101.64.0/18
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 108.162.192.0/18
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 190.93.240.0/20
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 188.114.96.0/20
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 197.234.240.0/22
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 198.41.128.0/17
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 162.158.0.0/15
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 104.16.0.0/13
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 104.24.0.0/14
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 172.64.0.0/13
      toPorts:
        - ports:
            - port: "7844"
    - toCIDRSet:
        - cidr: 131.0.72.0/22
      toPorts:
        - ports:
            - port: "7844"
